# particles-probability-methods

./: .gitignore  BeamsDynamic.ipynb  PlotsExamples.ipynb
console_particles_cpu/: CMakeLists.txt
console_particles_cpu/include/: bessel.h  bunch.h  forces.h  mymath.h  particle.h  vec3.h
console_particles_cpu/src/: getcoulombforce.cpp  main.cpp  particle.cpp  vec3.cpp
